fixing issue at pom.xml

--- a/invoice/pom.xml
+++ b/invoice/pom.xml
@@ -187,8 +187,9 @@
             <version>${hazelcast-spring.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
         </dependency>
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
